some responsive fix on mobile at dates and links element

--- a/src/app/components/event-preview/event-preview.component.scss
+++ b/src/app/components/event-preview/event-preview.component.scss
@@ -61,6 +61,12 @@ p {
         .date-links-container{
             display: flex;
             align-items: baseline;
+            .post-date-container{
+                min-width: 0;
+                .day-container{
+                    margin-inline-end: 0;
+                }
+            }
         }
     }
 
